objects/SurveyQuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who submitted this response? Will be blank if a Contact was not associated to the Case from where this survey was sent. (workflow rule updates this field)</description>
        <inlineHelpText>Who submitted this response? Will be blank if a Contact was not associated to the Case from where this survey was sent.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTaker__c</fullName>
        <label>SurveyTaker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>